--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>rs.ursus</groupId>
     <artifactId>commons</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1.SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Common Libraries</description>
     <developers>
@@ -80,11 +80,12 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5.3</version>
                     <configuration>
+                        <tagNameFormat>@{project.version}.RELEASE</tagNameFormat>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                        <resume>false</resume>
                         <pushChanges>false</pushChanges>
                         <useReleaseProfile>false</useReleaseProfile>
                         <releaseProfiles>release</releaseProfiles>
-                        <autoVersionSubmodules>true</autoVersionSubmodules>
-                        <tagNameFormat>@{project.version}</tagNameFormat>
                         <!--<connectionUrl>${project.scm.connection}</connectionUrl>-->
                     </configuration>
                     <dependencies>
