--- a/spring-logging/pom.xml
+++ b/spring-logging/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>rs.ursus</groupId>
         <artifactId>commons</artifactId>
-        <version>0.0.1.SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>rs.ursus.commons</groupId>
     <artifactId>spring-logging</artifactId>
-    <version>0.0.1.SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
