--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>rs.ursus</groupId>
         <artifactId>commons</artifactId>
-        <version>0.0.1.SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>rs.ursus.commons</groupId>
     <artifactId>utils</artifactId>
-    <version>0.0.1.SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
