Modified .travis.yml to include branches that match release branch regexp. Modified release.sh.
Signed-off-by: Djordje Stojanovic <djordje.stojanovic@ursus.rs>

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ deploy:
   provider: script
   script: ".travis/scripts/release.sh"
   on:
-    branch: "/^release[/].+$/"
+    all_branches: true
+    condition: "$TRAVIS_BRANCH =~ ^release[/].+$"
 addons:
   code_climate:
     repo_token: 4e2736756789ad38e0ad639ffbc984b4a3a3939e9ee204c83bdfd53dfe59dd09
